--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;600;700&family=VT323&display=swap");
 :root {
   --skyblue: #aaf3ff;
+  --duration: 1.5s;
+  --container-size: 250px;
+  --box-size: 33px;
+  --box-border-radius: 15%;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -13,6 +17,27 @@
 * {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fdf8e1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  border: 4px solid #f9dc5c;
+  animation: loader 2s infinite ease;
 }
 
 body {
