--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,10 @@
 {
   --skyblue: #aaf3ff;
   //--pixelfont: font-family: 'VT323', monospace;
+  --duration: 1.5s;
+  --container-size: 250px;
+  --box-size: 33px;
+  --box-border-radius: 15%;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -19,6 +23,28 @@
   scrollbar-width: none;  /* Firefox */
 }
 
+// CSS Pre-loader
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fdf8e1;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  border: 4px solid #f9dc5c;
+  animation: loader 2s infinite ease;
+}
+// CSS Pre-loader
 body
 {
   margin: 0;
