--- a/style.scss
+++ b/style.scss
@@ -57,10 +57,9 @@ body
   margin: 0;
   padding: 0;
   background: #0d434f;
-  height: 500px;
+  height: 400px;
   cursor: url("normal.cur"), auto;
   font-family: 'Pixelify Sans', cursive !important;
-  overflow-y: hidden;
 }
 
 .panel
@@ -227,7 +226,7 @@ body
 
 //Custom Button Color
 .button-color {
-  background: #8E24AA !important;
+  background: #CE93D8 !important;
 }
 
 //Gradients
